# GdxLibrary

./: build.gradle
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: notification_button_green.xml  notification_button_grey.xml  notification_item_background.xml  notification_menu_background.xml
android/res/layout/: layout_dialog_notification.xml  layout_item_notification.xml  layout_notification_menu.xml
android/res/menu/: notification_item.xml
android/res/values/: color.xml  dimensions.xml  strings.xml  styles.xml
android/res/values-v21/: styles.xml
android/src/main/cpp/: BBHFactory.cc  BackendRenderTarget.cc  Bitmap.cc  BreakIterator.cc  CMakeLists.txt  Canvas.cc  Codec.cc  ColorFilter.cc  ColorSpace.cc  ColorType.cc  Data.cc  DirectContext.cc  Drawable.cc  Font.cc  FontMgr.cc  FontStyleSet.cc  Graphics.cc  Image.cc  ImageFilter.cc  ManagedString.cc  MaskFilter.cc  OutputWStream.cc  Paint.cc  PaintFilterCanvas.cc  Path.cc  PathEffect.cc  PathMeasure.cc  PathSegmentIterator.cc  PathUtils.cc  Picture.cc  PictureRecorder.cc  PixelRef.cc  Pixmap.cc  Region.cc  RuntimeEffect.cc  RuntimeShaderBuilder.cc  Shader.cc  ShadowUtils.cc  StdVectorDecoder.cc  Surface.cc  (+10 more)
android/src/main/cpp/icu/: Unicode.cc
android/src/main/cpp/impl/: BufferUtil.cc  Library.cc  Managed.cc  RefCnt.cc
android/src/main/cpp/include/: FontRunIterator.hh  RunRecordClone.hh  TexBlobIter.hh  TextLine.hh  TextLineRunHandler.hh  mppinterop.h
android/src/main/cpp/paragraph/: FontCollection.cc  Paragraph.cc  ParagraphBuilder.cc  ParagraphCache.cc  ParagraphStyle.cc  StrutStyle.cc  TextStyle.cc  TypefaceFontProvider.cc  interop.cc
android/src/main/cpp/shaper/: FontMgrRunIterator.cc  FontRunIterator.cc  HbIcuScriptRunIterator.cc  IcuBidiRunIterator.cc  ManagedRunIterator.cc  Shaper.cc  TextBlobBuilderRunHandler.cc  interop.cc  interop.hh
android/src/main/cpp/skottie/: Animation.cc  AnimationBuilder.cc  Logger.cc  interop.cc
android/src/main/cpp/sksg/: InvalidationController.cc
android/src/main/cpp/svg/: SVGCanvas.cc  SVGDOM.cc  SVGNode.cc  SVGSVG.cc  interop.cc  interop.hh
assets/fonts/: dolly.fnt
assets/fonts/black/: font.fnt
core/src/: SceneManager.gwt.xml
desktop/: build.gradle
html/: build.gradle
html/webapp/: index.html
ios/: Info.plist.xml  build.gradle  robovm.properties  robovm.xml
(+208 files in other folders)
